# edi

./: .gitignore  meson.build
doc/: notes
src/: cexception.h  main.cc  tui.cc  tui.h  uimode.cc  uimode.h  uistd.cc  uistd.h  uiterm.cc  uiterm.h
src/ui/: modalwindow.h  windowmode.h
src/ui/tui/: TMainWindow.cc  TMainWindow.h  TSize.cc  TSize.h
test/: TMainWindowTest.cc  TuiTest.cc  main.cc  test.h  test_funct.cc  test_output.cc
